# ocl_example

./: .gitignore  CMakeLists.txt  README.md  main.c
helper/: opencl_check.h  opencl_util.c  opencl_util.h  read_file.c  read_file.h  timestamp.c  timestamp.h
input/: matrix1.txt  matrix2.txt
matrix/: matrix_comparison.c  matrix_comparison.h  matrix_parallel.cl  matrix_sequential.c  matrix_sequential.h  matrix_util.c  matrix_util.h
vector/: vector_sum.c  vector_sum.cl  vector_sum.h
